--- a/lib/ui/src/main/res/values/themes.xml
+++ b/lib/ui/src/main/res/values/themes.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
-
-<!--        todo: fix-->
-<!--        <item name="colorPrimary">@color/blue_500</item>-->
-<!--        <item name="colorPrimary">@color/core_white</item>-->
-<!--        <item name="colorAccent">@color/blue_500</item>-->
+        <item name="colorPrimary">@color/indigo50</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/core_black</item>
 
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+<!--        todo: what is this-->
 <!--        <item name="android:windowBackground">@color/steel_gray_50</item>-->
+
+        <item name="materialCalendarStyle">@style/Widget.MaterialComponents.MaterialCalendar</item>
+        <item name="materialCalendarFullscreenTheme">
+            @style/ThemeOverlay.MaterialComponents.MaterialCalendar.Fullscreen
+        </item>
+        <item name="materialCalendarTheme">@style/ThemeOverlay.MaterialComponents.MaterialCalendar
+        </item>
     </style>
 
     <style name="SplashTheme" parent="AppTheme">
