--- a/lib/ui/src/main/res/values/themes.xml
+++ b/lib/ui/src/main/res/values/themes.xml
@@ -7,8 +7,8 @@
 
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-<!--        todo: what is this-->
-<!--        <item name="android:windowBackground">@color/steel_gray_50</item>-->
+        <item name="android:windowBackground">@color/indigo50</item>
+        <item name="android:windowTranslucentStatus">true</item>
 
         <item name="materialCalendarStyle">@style/Widget.MaterialComponents.MaterialCalendar</item>
         <item name="materialCalendarFullscreenTheme">
