--- a/lib/ui/src/main/res/values/themes.xml
+++ b/lib/ui/src/main/res/values/themes.xml
@@ -16,6 +16,7 @@
         </item>
         <item name="materialCalendarTheme">@style/ThemeOverlay.MaterialComponents.MaterialCalendar
         </item>
+        <item name="materialTimePickerTheme">@style/ThemeOverlay.MaterialComponents.TimePicker</item>
     </style>
 
     <style name="SplashTheme" parent="AppTheme">
